Add more names for the Scaramucci A's

--- a/config/team_names.yml
+++ b/config/team_names.yml
@@ -99,8 +99,10 @@
   - oakland
   - oak
   - as
+  - ath
   - oakland as
   - sacramento
+  - sacramento athletics
   - sac
 134:
   - pittsburgh pirates
